Add separate module neoforge fml10 for 1.21.9 Use modern approach for locating JarInJar dependencies on neoforge Clean up unused code
#427