@@ -2,14 +2,13 @@ package pl.skidam.automodpack_loader_core_neoforge.loader;
 
 import net.neoforged.api.distmarker.Dist;
 import net.neoforged.fml.loading.FMLLoader;
-import net.neoforged.fml.loading.moddiscovery.ModFile;
+import net.neoforged.fml.loading.LoadingModList;
 import net.neoforged.fml.loading.moddiscovery.ModFileInfo;
 import net.neoforged.fml.loading.moddiscovery.ModInfo;
 import net.neoforged.neoforgespi.language.IModInfo;
 import pl.skidam.automodpack_core.loader.LoaderManagerService;
 import pl.skidam.automodpack_core.utils.CustomFileUtils;
 import pl.skidam.automodpack_core.utils.FileInspection;
-import pl.skidam.automodpack_loader_core_neoforge.mods.LoadedMods;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -28,16 +27,23 @@ public class LoaderManager implements LoaderManagerService {
 
     @Override
     public boolean isModLoaded(String modId) {
-        return FMLLoader.getLoadingModList().getModFileById(modId) != null;
+        LoadingModList loadingModList;
+        try {
+            loadingModList= FMLLoader.getLoadingModList();
+        } catch (IllegalStateException e) {
+            return false;
+        }
+        return loadingModList.getModFileById(modId) != null;
     }
 
     private Collection<FileInspection.Mod> modList = new ArrayList<>();
     private int lastLoadingModListSize = -1;
 
+    // Does it even still make sense to have this? FileInspection class should do everything anyway
     @Override
     public Collection<FileInspection.Mod> getModList() {
 
-        if (preload) {
+        if (preload) { // always empty on preload
             return modList;
         }
 
@@ -89,27 +95,14 @@ public class LoaderManager implements LoaderManagerService {
             return null;
         }
 
-        try {
-            if (preload) {
-                Collection<ModFile> modFiles = LoadedMods.INSTANCE.candidateMods;
-                for (var modFile : modFiles) {
-                    if (modFile.getModFileInfo() == null || modFile.getModInfos().isEmpty()) {
-                        continue;
-                    }
-                    if (modFile.getModInfos().get(0).getModId().equals(modId)) {
-                        return modFile.getModInfos().get(0).getOwningFile().getFile().getFilePath().toAbsolutePath();
-                    }
-                }
+        if (isModLoaded(modId)) {
+            ModFileInfo modInfo = FMLLoader.getLoadingModList().getModFileById(modId);
 
-            } else if (isModLoaded(modId)) {
-                ModFileInfo modInfo = FMLLoader.getLoadingModList().getModFileById(modId);
-
-                List<IModInfo> mods = modInfo.getMods();
-                if (!mods.isEmpty()) {
-                    return mods.get(0).getOwningFile().getFile().getFilePath().toAbsolutePath();
-                }
+            List<IModInfo> mods = modInfo.getMods();
+            if (!mods.isEmpty()) {
+                return mods.getFirst().getOwningFile().getFile().getFilePath().toAbsolutePath();
             }
-        } catch (Exception ignored) {}
+        }
 
         return null;
     }
@@ -128,17 +121,6 @@ public class LoaderManager implements LoaderManagerService {
         if (preload) {
             if (modId.equals("minecraft")) {
                 return FMLLoader.versionInfo().mcVersion();
-            }
-
-            Collection<ModFile> modFiles = LoadedMods.INSTANCE.candidateMods;
-
-            for (var modFile: modFiles) {
-                if (modFile.getModFileInfo() == null || modFile.getModInfos().isEmpty()) {
-                    continue;
-                }
-                if (modFile.getModInfos().get(0).getModId().equals(modId)) {
-                    return modFile.getModInfos().get(0).getVersion().toString();
-                }
             }
 
             return null;
